--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "estate",
   "version": "1.0.0",
   "description": "",
-  "main": "api/index.cjs",
-  "type": "module",
+  "main": "index.js",
+  
   "scripts": {
-    "dev": "nodemon api/index.cjs",
-    "start": "node api/index.cjs",
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
     "build": "npm install && npm install --prefix dreamheaven && npm run build --prefix dreamheaven"
   },
   "keywords": [],
